<resources>
    <string name="app_name">TryWidget1026</string>
    <string name="name_hint">이름을 입력하세요</string>
    <string name="age_hint">나이를 입력하세요.</string>
    <string name="name">이름</string>
    <string name="age">나이</string>
    <string name="gender">성별</string>
    <string name="occupation">직업</string>
    <string name="female">남자</string>
    <string name="male">여자</string>
    <string name="result">결과보기</string>
    <string name="submit">신청하기</string>
    <string name="student">학생</string>
    <string name="worker">직장인</string>
</resources>
