<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layout_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:gravity="top"
    android:orientation="vertical">


    <TextView
        android:id="@+id/name_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18sp" />
    <EditText
        android:id="@+id/name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"/>

    <TextView
        android:id="@+id/age_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="18sp" />
    <EditText
        android:id="@+id/age_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age_hint"/>

    <TextView
        android:id="@+id/gender_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="18sp" />
    <RadioGroup
        android:id="@+id/gender_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/gender_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"/>
        <RadioButton
            android:id="@+id/gender_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"/>
    </RadioGroup>

    <TextView
        android:id="@+id/occupation_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/occupation"
        android:textSize="18sp" />
    <RadioGroup
        android:id="@+id/occupation_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/occupation_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student"/>
        <RadioButton
            android:id="@+id/occupation_employer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/worker"/>
    </RadioGroup>
    <LinearLayout android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button android:id="@+id/show_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"/>
        <Button android:id="@+id/show_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"/>
    </LinearLayout>

    <TextView
        android:id="@+id/result_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="18sp" />
</LinearLayout>